2000-05-26  Andreas Jaeger  <aj@suse.de>

	* elf/ldconfig.h: Update parameter list for process_elf_file.

	* sysdeps/unix/sysv/linux/sparc/readelflib.c (process_elf_file):
	Add parameter file_length and pass it ot process_elf*file.

	* sysdeps/generic/readelflib.c (check_ptr): New.
	(process_elf_file): Use check_ptr to check all accesses to the
	mmapped file. Add parameter file_length.

	* elf/readlib.c (known_libs): Use <gnu/lib-names.h> to specify
	library names.

	* sunrpc/xdr_intXX_t.c (xdr_uint8_t): Fix conversion.
	Closes PR libc/1573, reported by Bradley White
	<bww@laurelnetworks.com>.

2000-05-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h: Define expm1 inline only if
	__FAST_MATH__ is defined.

2000-05-22  Andreas Jaeger  <aj@suse.de>

	* math/Makefile: Add -D__FAST_MATH__ to CFLAGS-test-ifloat.c,
	CFLAGS-test-idouble.c, CFLAGS-test-ildoubl.c.

	* manual/math.texi (FP Function Optimizations): Document gcc
	-ffast-math behaviour with mathinlines.

	* sysdeps/i386/fpu/bits/mathinline.h: Only use save inline
	functions unless -ffast-math is given to gcc.

2000-05-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/fpu/bits/mathinline.h (__sincos, __sincosf,
	__sincosl): Guard with __USE_GNU.

2000-05-24  Ulrich Drepper  <drepper@redhat.com>

	* csu/Makefile (routines): Add check_fds.
	* elf/rtld.c (dl_main): Call __libc_check_standard_fds for SUID
	binaries.  Add various __builtin_expect.
	* sysdeps/generic/libc-start.c: Move check_fds and helper functions...
	* sysdeps/generic/check_fds.c: ...here.  New file.

	* malloc/malloc.c (ptmalloc_init): Only enable debugging for SUID
	binaries if file /etc/suid-debug is available.

	* locale/programs/ld-collate.c (struct element_t): Add mbseqorder
	and wcseqorder members.
	(struct locale_collate_t): Likewise.
	(collate_finish): Assign collation sequence value to each character.
	Create tables for output.
	(collate_output): Write out tables with collation sequence information.